# Opencv_Chinese

./: README.MD
Arm/Font/: CMakeLists.txt  main.cpp
Arm/Font/FreeType/lib/pkgconfig/: freetype2.pc
Arm/Font/include/: cvxFont.h
Arm/Font/src/: cvxFont.cpp
Arm/freetype-2.13.2/INSTALL/include/freetype2/freetype/config/: ftoption.h
Arm/freetype-2.13.2/INSTALL/lib/: libfreetype.la
Arm/freetype-2.13.2/builds/unix/: config.status  freetype-config  libtool  unix-cc.mk  unix-def.mk
Arm/freetype-2.13.2/objs/: apinames  autofit.lo  bdf.lo  cff.lo  dlg.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sdf.lo  sfnt.lo  smooth.lo  svg.lo  (+5 more)
x64/: CMakeLists.txt  cvxFont.cpp  cvxFont.h
